tests/corpus/source_to_intent_parser/rejected/reject_hardware_hint.tucsrc
@triton.jit
def hardware_hint(x, y):
    target = "cuda"
    tl.store(y, x)
